--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         li:before {
             content: '';
             display: inline-block;
-            background-image: url("./021720_RJS/images/corona.jpg");
+            background-image: url("corona.jpg");
             width: 10px;
             height: 10px;
             margin: 0;
